// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Componente ProductTable > Debe coincidir con el snapshot (estructura HTML) 1`] = `
<div>
  <div
    class="rounded-lg border border-border bg-card overflow-hidden"
  >
    <div
      class="relative w-full overflow-auto"
    >
      <table
        class="w-full caption-bottom text-sm"
      >
        <thead
          class="[&_tr]:border-b bg-secondary"
        >
          <tr
            class="border-b transition-colors data-[state=selected]:bg-muted hover:bg-secondary"
          >
            <th
              class="h-12 px-4 text-left align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold"
            >
              Id
            </th>
            <th
              class="h-12 px-4 text-left align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold"
            >
              Nombre
            </th>
            <th
              class="h-12 px-4 text-left align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold"
            >
              Categoría
            </th>
            <th
              class="h-12 px-4 align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold text-right"
            >
              Precio
            </th>
            <th
              class="h-12 px-4 align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold text-center"
            >
              Stock
            </th>
            <th
              class="h-12 px-4 align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold text-center"
            >
              Mín. Alerta
            </th>
            <th
              class="h-12 px-4 align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold text-right"
            >
              Acciones
            </th>
          </tr>
        </thead>
        <tbody
          class="[&_tr:last-child]:border-0"
        >
          <tr
            class="border-b transition-colors data-[state=selected]:bg-muted hover:bg-muted/50"
          >
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 font-medium text-xs text-muted-foreground"
            >
              p1
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 font-semibold"
            >
              Consola X
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
            >
              consolas
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right font-medium"
            >
              $500.000
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-center font-bold px-2 py-1 text-green-500/80"
            >
              <span
                class="flex items-center justify-center gap-1"
              >
                20
              </span>
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-center text-sm text-muted-foreground"
            >
              5
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right space-x-1"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-blue-400 hover:bg-blue-400/20"
                title="Ver Detalle"
              >
                <svg
                  class="lucide lucide-eye h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
              </button>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-yellow-500 hover:bg-yellow-500/20"
                title="Editar"
              >
                <svg
                  class="lucide lucide-square-pen h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
                  />
                  <path
                    d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
                  />
                </svg>
              </button>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-red-500 hover:bg-red-500/20"
                title="Eliminar"
              >
                <svg
                  class="lucide lucide-trash2 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 6h18"
                  />
                  <path
                    d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                  />
                  <path
                    d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                  />
                  <line
                    x1="10"
                    x2="10"
                    y1="11"
                    y2="17"
                  />
                  <line
                    x1="14"
                    x2="14"
                    y1="11"
                    y2="17"
                  />
                </svg>
              </button>
            </td>
          </tr>
          <tr
            class="border-b transition-colors data-[state=selected]:bg-muted hover:bg-muted/50"
          >
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 font-medium text-xs text-muted-foreground"
            >
              p2
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 font-semibold"
            >
              Mouse Gamer
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
            >
              accesorios
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right font-medium"
            >
              $15.000
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-center px-2 py-1 text-yellow-500 font-bold bg-yellow-500/10"
            >
              <span
                class="flex items-center justify-center gap-1"
              >
                <svg
                  class="lucide lucide-triangle-alert h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                  />
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                </svg>
                2
              </span>
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-center text-sm text-muted-foreground"
            >
              5
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right space-x-1"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-blue-400 hover:bg-blue-400/20"
                title="Ver Detalle"
              >
                <svg
                  class="lucide lucide-eye h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
              </button>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-yellow-500 hover:bg-yellow-500/20"
                title="Editar"
              >
                <svg
                  class="lucide lucide-square-pen h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
                  />
                  <path
                    d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
                  />
                </svg>
              </button>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-red-500 hover:bg-red-500/20"
                title="Eliminar"
              >
                <svg
                  class="lucide lucide-trash2 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 6h18"
                  />
                  <path
                    d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                  />
                  <path
                    d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                  />
                  <line
                    x1="10"
                    x2="10"
                    y1="11"
                    y2="17"
                  />
                  <line
                    x1="14"
                    x2="14"
                    y1="11"
                    y2="17"
                  />
                </svg>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Componente ProductTable > Debe coincidir con el snapshot 1`] = `
<div>
  <div
    class="rounded-lg border border-border bg-card overflow-hidden"
  >
    <div
      class="relative w-full overflow-auto"
    >
      <table
        class="w-full caption-bottom text-sm"
      >
        <thead
          class="[&_tr]:border-b bg-secondary"
        >
          <tr
            class="border-b transition-colors data-[state=selected]:bg-muted hover:bg-secondary"
          >
            <th
              class="h-12 px-4 text-left align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold"
            >
              Id
            </th>
            <th
              class="h-12 px-4 text-left align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold"
            >
              Nombre
            </th>
            <th
              class="h-12 px-4 text-left align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold"
            >
              Categoría
            </th>
            <th
              class="h-12 px-4 align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold text-right"
            >
              Precio
            </th>
            <th
              class="h-12 px-4 align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold text-center"
            >
              Stock
            </th>
            <th
              class="h-12 px-4 align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold text-center"
            >
              Mín. Alerta
            </th>
            <th
              class="h-12 px-4 align-middle text-muted-foreground [&:has([role=checkbox])]:pr-0 font-bold text-right"
            >
              Acciones
            </th>
          </tr>
        </thead>
        <tbody
          class="[&_tr:last-child]:border-0"
        >
          <tr
            class="border-b transition-colors data-[state=selected]:bg-muted hover:bg-muted/50"
          >
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 font-medium text-xs text-muted-foreground"
            >
              p1
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 font-semibold"
            >
              Consola X
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
            >
              consolas
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right font-medium"
            >
              $500.000
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-center font-bold px-2 py-1 text-green-500/80"
            >
              <span
                class="flex items-center justify-center gap-1"
              >
                20
              </span>
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-center text-sm text-muted-foreground"
            >
              5
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right space-x-1"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-blue-400 hover:bg-blue-400/20"
                title="Ver Detalle"
              >
                <div
                  data-testid="icon-eye"
                />
              </button>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-yellow-500 hover:bg-yellow-500/20"
                title="Editar"
              >
                <div
                  data-testid="icon-edit"
                />
              </button>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-red-500 hover:bg-red-500/20"
                title="Eliminar"
              >
                <div
                  data-testid="icon-trash"
                />
              </button>
            </td>
          </tr>
          <tr
            class="border-b transition-colors data-[state=selected]:bg-muted hover:bg-muted/50"
          >
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 font-medium text-xs text-muted-foreground"
            >
              p2
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 font-semibold"
            >
              Mouse Gamer
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
            >
              accesorios
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right font-medium"
            >
              $15.000
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-center px-2 py-1 text-yellow-500 font-bold bg-yellow-500/10"
            >
              <span
                class="flex items-center justify-center gap-1"
              >
                <div
                  data-testid="icon-alert"
                />
                2
              </span>
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-center text-sm text-muted-foreground"
            >
              5
            </td>
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right space-x-1"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-blue-400 hover:bg-blue-400/20"
                title="Ver Detalle"
              >
                <div
                  data-testid="icon-eye"
                />
              </button>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-yellow-500 hover:bg-yellow-500/20"
                title="Editar"
              >
                <div
                  data-testid="icon-edit"
                />
              </button>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-8 w-8 text-red-500 hover:bg-red-500/20"
                title="Eliminar"
              >
                <div
                  data-testid="icon-trash"
                />
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
